--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 </div>
 <div class="row">
 <div class="col-md-12">
-    <ag-grid-ng2 style="width: 100%; height:500px;" #agGrid class="ag-dark"
+    <ag-grid-ng2 style="width: 100%; height:520px;" #agGrid class="ag-blue"
     [gridOptions]="gridOptions">
    </ag-grid-ng2>
 </div>
